--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>纸叠效果会员登录界面模板</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/body.css"/>
+    <title>BILLBOOK</title>
+    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/static/assets/css/body.css"/>
 </head>
 <body>
 <div class="container">
@@ -12,7 +12,7 @@
         <form action="">
             <h1>会员登录</h1>
             <div>
-                <input type="text" placeholder="邮箱" required="" id="username" />
+                <input type="text" placeholder="账号" required="" id="username" />
             </div>
             <div>
                 <input type="password" placeholder="密码" required="" id="password" />
@@ -26,10 +26,10 @@
                 <!-- <a href="#">Register</a> -->
             </div>
         </form><!-- form -->
-        <div class="button">
+     <!--   <div class="button">
             <span class="help-block u-errormessage" id="js-server-helpinfo">&nbsp;</span>
             <a href="#">下载网盘</a>
-        </div> <!-- button -->
+        </div> &lt;!&ndash; button &ndash;&gt;-->
     </section><!-- content -->
 </div>
 <!-- container -->
