--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -9,10 +9,9 @@
         body{height:100%;}
     </style>
 </head>
-<frameset rows="5.4,89.6,5" frameborder="0" border="0" framespacing="0">
-    <frame src="top.jsp" name="topFrame" noresize="noresize" id="topFrame"/>
-    <frame src="main.jsp" name="mainFrame" id="mainFrame" />
-    <frame src="foot.jsp" name="footFrame" id="footFrame" />
+<frameset cols="14,86" frameborder="0" border="0" framespacing="0">
+    <frame src="left.jsp" name="leftFrame" noresize="noresize" id="leftFrame" />
+    <frame src="/Report/homePage" name="rightFrame" noresize="noresize" id="rightFrame" />
 </frameset>
 <noframes><body></body></noframes>
 </html>
