--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -9,8 +9,8 @@
         body{height:100%;}
     </style>
 </head>
-<frameset rows="5.4,89.6,5" frameborder="0" border="0" framespacing="0">
-    <frame src="top.jsp" name="topFrame" noresize="noresize" id="topFrame"/>
+<frameset rows="5.4%,89.6%,5%" frameborder="0" border="0" framespacing="0">
+    <frame src="top.jsp" name="topFrame" id="topFrame"/>
     <frame src="main.jsp" name="mainFrame" id="mainFrame" />
     <frame src="foot.jsp" name="footFrame" id="footFrame" />
 </frameset>
