--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -9,7 +9,7 @@
         body{height:100%;}
     </style>
 </head>
-<frameset cols="14,86" frameborder="0" border="0" framespacing="0">
+<frameset cols="14%,86%" frameborder="0" border="0" framespacing="0">
     <frame src="left.jsp" name="leftFrame" noresize="noresize" id="leftFrame" />
     <frame src="/Report/homePage" name="rightFrame" noresize="noresize" id="rightFrame" />
 </frameset>
