--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -28,4 +28,6 @@
     <script src="/static/assets/js/amazeui.min.js"></script>
     <!--<![endif]-->
     <script src="/static/assets/js/app.js"></script>
+
+    <script src="/static/common/js/utils.js"></script>
 </head>
