--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -30,4 +30,7 @@
     <script src="/static/assets/js/app.js"></script>
 
     <script src="/static/common/js/utils.js"></script>
+    <!-- datePicker -->
+    <script src="/static/datetimepicker/js/amazeui.datetimepicker.js"></script>
+    <link rel="stylesheet" href="/static/datetimepicker/css/amazeui.datetimepicker.css"/>
 </head>
