--- a/src/main/resources/templates/admin/billManager/add.html
+++ b/src/main/resources/templates/admin/billManager/add.html
@@ -1,18 +1,30 @@
 <#include "/admin/head.html">
+<script>
+    $(function () {
+        $('#billDate').datetimepicker({
+            showSecond: true,
+            showMillisec: true,
+            timeFormat: 'hh:mm:ss:l'
+        });
+    });
+
+</script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">表单</strong> / <small>form</small></div>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单管理</strong> /
+            <small>添加</small>
+        </div>
     </div>
 
     <div class="am-g">
-        <form class="am-form">
+        <form class="am-form" action="save" >
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
                     账单名
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" class="am-input-sm">
+                    <input type="text" name="name" value="流水账" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
             </div>
@@ -23,12 +35,16 @@
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
-                        <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="options" id="option1"> 出账
+                        <select name="billTypeId">
+                            <option value="">请选择&nbsp;&nbsp;&nbsp;</option>
+                            <option value="1">食物</option>
+                        </select>
+                        <!--<label class="am-btn am-btn-default am-btn-xs">
+                            <input type="radio" name="options" value="0" id="option1"> 出账
                         </label>
                         <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="options" id="option2"> 入账
-                        </label>
+                            <input type="radio" name="options" value="1" id="option2"> 入账
+                        </label>-->
                     </div>
                 </div>
             </div>
@@ -38,7 +54,7 @@
                     金额
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" class="am-input-sm">
+                    <input type="text" name="money" class="am-input-sm">
                 </div>
             </div>
 
@@ -47,12 +63,8 @@
                     账单时间
                 </div>
                 <div class="am-u-sm-10">
-                    <form action="" class="am-form am-form-inline">
-                        <div class="am-form-group am-form-icon">
-                            <i class="am-icon-calendar"></i>
-                            <input type="text" class="am-form-field am-input-sm" placeholder="时间">
-                        </div>
-                    </form>
+                        <input type="text" name="billDate" />
+                        <p><input type="text" class="am-form-field" placeholder="日历组件" data-am-datepicker="{theme: 'success'}" readonly/></p>
                 </div>
             </div>
 
@@ -61,7 +73,7 @@
                     创建人
                 </div>
                 <div class="am-u-sm-10">
-                    <input type="text" class="am-input-sm">
+                    <input type="text" name="creatorId" value="1" class="am-input-sm">
                 </div>
             </div>
 
@@ -70,15 +82,15 @@
                     描述
                 </div>
                 <div class="am-u-sm-10">
-                    <textarea rows="10" placeholder="请使用富文本编辑插件"></textarea>
+                    <textarea rows="10" name="description"></textarea>
                 </div>
             </div>
-
+            <div class="am-margin">
+                <button type="submit" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
+                <!--     <button type="button" class="am-btn am-btn-primary am-btn-xs">返回列表</button>-->
+            </div>
         </form>
     </div>
 
-    <div class="am-margin">
-        <button type="button" class="am-btn am-btn-primary am-btn-xs">提交保存</button>
-        <button type="button" class="am-btn am-btn-primary am-btn-xs">放弃保存</button>
-    </div>
+
 </div>
