--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>${site.name}Shop Administrator's Control Panel - powered by ${site.name}Shop</title>
-    <link type="image/x-icon" rel="icon" href="${base}/${ICO!}"/>
-    <style type="text/css">
-        html{height:100%; overflow:hidden;}
-        body{height:100%;}
-    </style>
-</head>
+<#include "/admin/head.html">
+<script>
+    window.onload = function () {
+        dyniframesize();
+    };
+</script>
+
 <frameset rows="5.4%,89.6%,5%" frameborder="0" border="0" framespacing="0">
     <frame src="top.jsp" name="topFrame" id="topFrame"/>
     <frame src="main.jsp" name="mainFrame" id="mainFrame" />
