--- a/src/main/resources/templates/admin/billManager/add.html
+++ b/src/main/resources/templates/admin/billManager/add.html
@@ -38,7 +38,7 @@
                         <select name="billTypeId">
                             <option value="">请选择&nbsp;&nbsp;&nbsp;</option>
                             <#list typeList as type>
-                                <option value=${type.name}>${type.name}</option>
+                                <option value=${type.id}>${type.name}</option>
                             </#list>
                         </select>
                         <!--<label class="am-btn am-btn-default am-btn-xs">
