--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Amaze后台管理系统模板HTML首页 - cssmoban</title>
+    <title>BillBook账单管理系统 - cssmoban</title>
     <meta name="description" content="这是一个 index 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -34,3 +34,8 @@
     <script src="/static/datetimepicker/js/amazeui.datetimepicker.js"></script>
     <link rel="stylesheet" href="/static/datetimepicker/css/amazeui.datetimepicker.css"/>
 </head>
+<style>
+    .am-pagination>li>a, .am-pagination>li>span {
+        cursor: pointer;
+    }
+</style>
