--- a/src/main/resources/templates/admin/billManager/add.html
+++ b/src/main/resources/templates/admin/billManager/add.html
@@ -24,6 +24,7 @@
                     账单名
                 </div>
                 <div class="am-u-sm-10">
+                    <!--<input type="hidden" name="creatorId" value="1" />-->
                     <input type="text" name="name" value="流水账" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
