--- a/src/main/resources/templates/admin/left.html
+++ b/src/main/resources/templates/admin/left.html
@@ -6,11 +6,9 @@
         <li class="admin-parent">
             <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 我的账单 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
             <ul class="am-list admin-sidebar-sub am-collapse" id="collapse-nav" style="height: 0px;">
-                <li><a href="admin-user.html" class="am-cf"><span class="am-icon-check"></span> 我要记账<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
+                <li><a href="/BillMgr/add" target="rightFrame" class="am-cf"><span class="am-icon-check"></span> 我要记账<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
                 <li><a href="/BillMgr/list" target="rightFrame"><span class="am-icon-puzzle-piece"></span> 账单管理</a></li>
-                <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 相册页面<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
-                <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
-                <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
+                <li><a href="/BillType/list" target="rightFrame"><span class="am-icon-th"></span>账单类型管理<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
             </ul>
         </li>
         <li><a href="admin-table.html"><span class="am-icon-table"></span> 日志</a></li>
@@ -20,7 +18,7 @@
             <ul class="am-list admin-sidebar-sub am-collapse" id="collapse-nav2" style="height: 0px;">
                 <li><a href="admin-user.html" class="am-cf"><span class="am-icon-check"></span> 入账统计<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
                 <li><a href="admin-help.html"><span class="am-icon-puzzle-piece"></span> 出账统计</a></li>
-                <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 相册页面<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
+                <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 统计分析<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                 <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
                 <li><a href="admin-404.html"><span class="am-icon-bug"></span> 404</a></li>
             </ul>
@@ -31,7 +29,7 @@
     <div class="am-panel am-panel-default admin-sidebar-panel">
         <div class="am-panel-bd">
             <p><span class="am-icon-bookmark"></span> 公告</p>
-            <p>时光静好，与君语；细水流年，与君同。—— Amaze</p>
+            <p>打算日微信小程序了，还有超鬼王。。</p>
         </div>
     </div>
 
