--- a/src/main/resources/templates/admin/top.html
+++ b/src/main/resources/templates/admin/top.html
@@ -7,7 +7,7 @@
 
 <header class="am-topbar admin-header">
     <div class="am-topbar-brand">
-        <strong>Amaze</strong> <small>后台管理模板HTML</small>
+        <strong>BillBook</strong> <small>账单管理系统</small>
     </div>
 
     <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
