--- a/src/main/resources/templates/admin/billManager/edit.html
+++ b/src/main/resources/templates/admin/billManager/edit.html
@@ -17,8 +17,9 @@
     </div>
 
     <div class="am-g">
-        <form class="am-form" action="updateBill" >
+        <form class="am-form" action="../update" >
             <input type="hidden" name="id" value=${bill.id} class="am-input-sm">
+            <input type="hidden" name="creatorId" value=${bill.creatorId} />
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
                     账单名
@@ -46,12 +47,6 @@
 
                             </#list>
                         </select>
-                        &lt;!&ndash;<label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="options" value="0" id="option1"> 出账
-                        </label>
-                        <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="options" value="1" id="option2"> 入账
-                        </label>&ndash;&gt;
                     </div>
                 </div>
             </div>
