--- a/src/main/resources/templates/admin/billTypeMgr/edit.html
+++ b/src/main/resources/templates/admin/billTypeMgr/edit.html
@@ -2,13 +2,13 @@
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单管理</strong> /
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单类型管理</strong> /
             <small>添加</small>
         </div>
     </div>
 
     <div class="am-g">
-        <form class="am-form" action="save" >
+        <form class="am-form" action="../update" >
             <input type="hidden" name="id" value="${type.id}" class="am-input-sm">
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
