--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -2,7 +2,8 @@
     function changeFrameHeight(){
         var ifm= document.getElementById("rightFrame");
         var topHeight = $("#topbar-collapse").height();
-        ifm.height=document.documentElement.clientHeight;
+        ifm.height=document.documentElement.clientHeight-topHeight;
+        alert(ifm.height);
         var leftWidth = $(".admin-sidebar").width();
         ifm.width=document.documentElement.clientWidth-leftWidth-1;
     }
