--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -9,13 +9,13 @@
 <body>
 <div class="container">
     <section id="content">
-        <form action="">
+        <form action="loginCheck">
             <h1>会员登录</h1>
             <div>
-                <input type="text" placeholder="账号" required="" id="username" />
+                <input type="text" placeholder="账号" required="" id="username" name="account" />
             </div>
             <div>
-                <input type="password" placeholder="密码" required="" id="password" />
+                <input type="password" placeholder="密码" required="" id="password" name="password" />
             </div>
             <div class="">
                 <span class="help-block u-errormessage" id="js-server-helpinfo">&nbsp;</span>			</div>
