--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -1,41 +1,64 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>BILLBOOK</title>
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/body.css"/>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>BillBook账本登录界面 - cssmoban</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="alternate icon" type="image/png" href="../static/assets/i/favicon.png">
+    <link rel="stylesheet" href="../static/assets/css/amazeui.min.css"/>
+    <style>
+        .header {
+            text-align: center;
+        }
+        .header h1 {
+            font-size: 200%;
+            color: #333;
+            margin-top: 30px;
+        }
+        .header p {
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <section id="content">
-        <form action="loginCheck">
-            <h1>会员登录</h1>
-            <div>
-                <input type="text" placeholder="账号" required="" id="username" name="account" />
-            </div>
-            <div>
-                <input type="password" placeholder="密码" required="" id="password" name="password" />
-            </div>
-            <div class="">
-                <span class="help-block u-errormessage" id="js-server-helpinfo">&nbsp;</span>			</div>
-            <div>
-                <!-- <input type="submit" value="Log in" /> -->
-                <input type="submit" value="登录" class="btn btn-primary" id="js-btn-login"/>
-                <a href="#">忘记密码?</a>
-                <!-- <a href="#">Register</a> -->
-            </div>
-        </form><!-- form -->
-     <!--   <div class="button">
-            <span class="help-block u-errormessage" id="js-server-helpinfo">&nbsp;</span>
-            <a href="#">下载网盘</a>
-        </div> &lt;!&ndash; button &ndash;&gt;-->
-    </section><!-- content -->
+<div class="header">
+    <hr />
 </div>
-<!-- container -->
+<div class="am-g">
+    <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
+        <h3>登录</h3>
+        <hr>
+        <div class="am-btn-group">
+            <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
+            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i> Google+</a>
+            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i> stackOverflow</a>
+        </div>
+        <br>
+        <br>
 
-
-<br><br><br><br>
-
+        <form method="post" action="loginCheck" class="am-form">
+            <label for="email">账号:</label>
+            <input type="text" name="account" id="email" value="">
+            <br>
+            <label for="password">密码:</label>
+            <input type="password" name="password" id="password" value="">
+            <br>
+            <label for="remember-me">
+                <input id="remember-me" type="checkbox">
+                记住密码
+            </label>
+            <br />
+            <div class="am-cf">
+                <input type="submit" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">
+                <input type="submit" name="" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr">
+            </div>
+        </form>
+        <hr>
+    </div>
+</div>
 </body>
 </html>
