--- a/src/main/resources/templates/admin/report/homePage.html
+++ b/src/main/resources/templates/admin/report/homePage.html
@@ -1,4 +1,5 @@
 <#include "/admin/head.html">
+<script src="/static/admin/report/homePage.js"></script>
 <!-- content start -->
 <div class="admin-content">
 
@@ -7,9 +8,9 @@
     </div>
 
     <ul class="am-avg-sm-1 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-file-suitcase"></span><br/>本月出账<br/>2300</a></li>
-        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-money"></span><br/>本月入账<br/>308</a></li>
-        <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>昨日访问<br/>80082</a></li>
+        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月出账<br/></a></li>
+        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-money"></span><br/>本月入账<br/></a></li>
+        <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>本月剩余<br/>未设定</a></li>
         <li><a href="#" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>用户数量<br/>3000</a></li>
     </ul>
 
