--- a/src/main/resources/templates/admin/report/homePage.html
+++ b/src/main/resources/templates/admin/report/homePage.html
@@ -8,8 +8,8 @@
     </div>
 
     <ul class="am-avg-sm-1 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月出账<br/></a></li>
-        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-money"></span><br/>本月入账<br/></a></li>
+        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月出账<br/><span id="out_mon"></span></a></li>
+        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-money"></span><br/>本月入账<br/><span id="in_mon"></span></a></li>
         <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>本月剩余<br/>未设定</a></li>
         <li><a href="#" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>用户数量<br/>3000</a></li>
     </ul>
