--- a/src/main/resources/templates/admin/billManager/list.html
+++ b/src/main/resources/templates/admin/billManager/list.html
@@ -57,7 +57,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <#list billPage.items as bill>
+                        <#list page.items as bill>
                         <tr>
                             <td><input type="checkbox"/></td>
                             <td>${bill_index+1}</td>
@@ -82,22 +82,7 @@
                         </#list>
                     </tbody>
                 </table>
-                <div class="am-cf">
-                    共 ${billPage.totalNum} 条记录
-                    <div class="am-fr">
-                        <ul class="am-pagination">
-                            <li><span href="#" onclick="turnPage(1)">«</span></li>
-                            <#list 1..billPage.totalPage as i>
-                                <#if i == billPage.currentPage>
-                                    <li class="am-active"><span href="#">${i}</span></li>
-                                <#else>
-                                    <li><span href="#" onclick="turnPage(${i})">${i}</span></li>
-                                </#if>
-                            </#list>
-                            <li><span href="#" onclick="turnPage(${billPage.totalPage})">»</span></li>
-                        </ul>
-                    </div>
-                </div>
+               <#include "/admin/basePageContent/pagination.html">
                 <hr/>
                 <p>注：.....</p>
             </form>
