--- a/src/main/resources/templates/admin/billTypeMgr/list.html
+++ b/src/main/resources/templates/admin/billTypeMgr/list.html
@@ -55,7 +55,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <#list typePage.items as type>
+                        <#list page.items as type>
                         <tr>
                             <td><input type="checkbox"/></td>
                             <td>${type_index+1}</td>
@@ -84,22 +84,7 @@
                         </#list>
                     </tbody>
                 </table>
-                <div class="am-cf">
-                    共 ${typePage.totalNum} 条记录
-                    <div class="am-fr">
-                        <ul class="am-pagination">
-                            <li><span href="#" onclick="turnPage(1)">«</span></li>
-                            <#list 1..typePage.totalPage as i>
-                                <#if i == typePage.currentPage>
-                                    <li class="am-active"><span href="#">${i}</span></li>
-                                <#else>
-                                    <li><span href="#" onclick="turnPage(${i})">${i}</span></li>
-                                </#if>
-                            </#list>
-                            <li><span href="#" onclick="turnPage(${typePage.totalPage})">»</span></li>
-                        </ul>
-                    </div>
-                </div>
+                <#include "/admin/basePageContent/pagination.html">
                 <hr/>
                 <p>注：.....</p>
             </form>
