--- a/src/main/resources/templates/admin/notice/edit.html
+++ b/src/main/resources/templates/admin/notice/edit.html
@@ -9,51 +9,42 @@
 
     <div class="am-g">
         <form class="am-form" action="../update" >
-            <input type="hidden" name="id" value="${type.id}" class="am-input-sm">
+            <input type="hidden" name="id" value="${notice.id}" class="am-input-sm">
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
-                    类型名称
+                    公告名称
                 </div>
                 <div class="am-u-sm-10">
                     <!--<input type="hidden" name="creatorId" value="1" />-->
-                    <input type="text" name="name" value="${type.name}" class="am-input-sm">
+                    <input type="text" name="name" value="${notice.name}" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
             </div>
 
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
-                    出入账类型
+                    内容
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
+                        <script type="text/javascript">
 
-                        <#if type.type == 0>
-                            <label class="am-btn am-btn-default am-btn-xs am-active">
-                            <input type="radio" name="type" value="0" id="option1" checked="checked"> 出账
-                            </label>
-                            <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="type" value="1" id="option2"> 入账
-                            </label>
-                        <#else>
-                            <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="type" value="0" id="option1"> 出账
-                            </label>
-                            <label class="am-btn am-btn-default am-btn-xs am-active">
-                            <input type="radio" name="type" value="1" id="option2" checked="checked"> 入账
-                            </label>
-                        </#if>
+                            //实例化编辑器
+                            //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+                            var ue = UE.getEditor('editor');
 
+                        </script>
+                            <textarea id="editor" rows="10" name="comment">${notice.content}</textarea>
                     </div>
                 </div>
             </div>
 
             <div class="am-g am-margin-top-sm">
                 <div class="am-u-sm-2 am-text-right">
-                    备注
+                    日期
                 </div>
                 <div class="am-u-sm-10">
-                    <textarea rows="10" name="comment">${type.comment}</textarea>
+                    <textarea rows="10" name="comment">${notice.createDate}</textarea>
                 </div>
             </div>
             <div class="am-margin">
