--- a/src/main/resources/templates/admin/notice/list.html
+++ b/src/main/resources/templates/admin/notice/list.html
@@ -47,7 +47,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <#list noticePage.items as notice>
+                        <#list page.items as notice>
                         <tr>
                             <td><input type="checkbox"/></td>
                             <td>${notice_index+1}</td>
@@ -72,22 +72,7 @@
                         </#list>
                     </tbody>
                 </table>
-                <div class="am-cf">
-                    共 ${noticePage.totalNum} 条记录
-                    <div class="am-fr">
-                        <ul class="am-pagination">
-                            <li><span href="#" onclick="turnPage(1)">«</span></li>
-                            <#list 1..noticePage.totalPage as i>
-                                <#if i == noticePage.currentPage>
-                                    <li class="am-active"><span href="#">${i}</span></li>
-                                <#else>
-                                    <li><span href="#" onclick="noticePage(${i})">${i}</span></li>
-                                </#if>
-                            </#list>
-                            <li><span href="#" onclick="noticePage(${noticePage.totalPage})">»</span></li>
-                        </ul>
-                    </div>
-                </div>
+                <#include "/admin/basePageContent/pagination.html">
                 <hr/>
                 <p>注：.....</p>
             </form>
