--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -33,6 +33,9 @@
     <!-- datePicker -->
     <script src="/static/datetimepicker/js/amazeui.datetimepicker.js"></script>
     <link rel="stylesheet" href="/static/datetimepicker/css/amazeui.datetimepicker.css"/>
+    <script type="text/javascript" src="/static/ueditor/utf8-jsp/ueditor.config.js"></script>
+    <script type="text/javascript" src="/static/ueditor/utf8-jsp/ueditor.all.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/static/ueditor/utf8-jsp/lang/zh-cn/zh-cn.js"></script>
 </head>
 <style>
     .am-pagination>li>a, .am-pagination>li>span {
