--- a/src/main/resources/templates/admin/notice/add.html
+++ b/src/main/resources/templates/admin/notice/add.html
@@ -1,21 +1,30 @@
 <#include "/admin/head.html">
+
+<script type="text/javascript">
+    var ue = UE.getEditor('content');
+    function initPage(){
+        $('#createDate').datetimepicker({
+            minView: 'month',
+            format: 'yyyy-mm-dd'
+        });
+    }
+</script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单管理</strong> /
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">公告管理</strong> /
             <small>添加</small>
         </div>
     </div>
 
     <div class="am-g">
-        <form class="am-form" action="save" >
+        <form class="am-form" action="../update" >
             <input type="hidden" name="id" value="" class="am-input-sm">
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
-                    类型名称
+                    公告名称
                 </div>
                 <div class="am-u-sm-10">
-                    <!--<input type="hidden" name="creatorId" value="1" />-->
                     <input type="text" name="name" value="" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
@@ -23,26 +32,20 @@
 
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
-                    出入账类型
+                    内容
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
-                        <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="type" value="0" id="option1"> 出账
-                        </label>
-                        <label class="am-btn am-btn-default am-btn-xs">
-                            <input type="radio" name="type" value="1" id="option2"> 入账
-                        </label>
+                        <textarea id="content" rows="15" name="content"></textarea>
                     </div>
                 </div>
             </div>
-
             <div class="am-g am-margin-top-sm">
                 <div class="am-u-sm-2 am-text-right">
-                    备注
+                    日期
                 </div>
                 <div class="am-u-sm-10">
-                    <textarea rows="10" name="comment"></textarea>
+                    <input type="text" id="createDate" name="createDate" class="am-form-field" readonly/>
                 </div>
             </div>
             <div class="am-margin">
