--- a/src/main/resources/templates/admin/notice/edit.html
+++ b/src/main/resources/templates/admin/notice/edit.html
@@ -1,9 +1,19 @@
 <#include "/admin/head.html">
+
+<script type="text/javascript">
+    var ue = UE.getEditor('content');
+    function initPage(){
+        $('#createDate').datetimepicker({
+            minView: 'month',
+            format: 'yyyy-mm-dd'
+        });
+    }
+</script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">账单类型管理</strong> /
-            <small>添加</small>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">公告管理</strong> /
+            <small>修改</small>
         </div>
     </div>
 
@@ -15,7 +25,6 @@
                     公告名称
                 </div>
                 <div class="am-u-sm-10">
-                    <!--<input type="hidden" name="creatorId" value="1" />-->
                     <input type="text" name="name" value="${notice.name}" class="am-input-sm">
                 </div>
                 <!--<div class="am-u-sm-6">*必填，不可重复</div>-->
@@ -27,24 +36,16 @@
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
-                        <script type="text/javascript">
-
-                            //实例化编辑器
-                            //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-                            var ue = UE.getEditor('editor');
-
-                        </script>
-                            <textarea id="editor" rows="10" name="comment">${notice.content}</textarea>
+                        <textarea id="content" rows="15" name="content">${notice.content}</textarea>
                     </div>
                 </div>
             </div>
-
             <div class="am-g am-margin-top-sm">
                 <div class="am-u-sm-2 am-text-right">
                     日期
                 </div>
                 <div class="am-u-sm-10">
-                    <textarea rows="10" name="comment">${notice.createDate}</textarea>
+                    <input type="text" id="createDate" name="createDate" value="${notice.createDate?string('yyyy-MM-dd')}" class="am-form-field" readonly/>
                 </div>
             </div>
             <div class="am-margin">
