--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -12,7 +12,7 @@
     }
     $(function(){changeFrameHeight();});
 </script>
-
+<#include "/admin/top.html">
 <#include "/admin/left.html">
 <iframe src="/Report/homePage" name="rightFrame" frameborder="0" noresize="noresize" id="rightFrame" ></iframe>
 <#include "/admin/foot.html">
