--- a/src/main/resources/templates/admin/user/userCenter.html
+++ b/src/main/resources/templates/admin/user/userCenter.html
@@ -1,4 +1,5 @@
 <#include "/admin/head.html">
+<script src="/static/admin/user/userCenter.js"></script>
 <!-- content start -->
 <div class="admin-content">
     <div class="am-cf am-padding">
@@ -18,11 +19,11 @@
                         </div>
                         <div class="am-u-md-8">
                             <p>你可以使用<a href="#">gravatar.com</a>提供的头像或者使用本地上传头像。 </p>
-                            <form class="am-form">
+                            <form id="userPhoto" action="uploadPhoto" method="post" class="am-form" enctype="multipart/form-data">
                                 <div class="am-form-group">
-                                    <input type="file" id="user-pic">
+                                    <input type="file" name="userPhoto" id="user-pic">
                                     <p class="am-form-help">请选择要上传的文件...</p>
-                                    <button type="button" class="am-btn am-btn-primary am-btn-xs">保存</button>
+                                    <button type="button" onclick="registPost()" class="am-btn am-btn-primary am-btn-xs">保存</button>
                                 </div>
                             </form>
                         </div>
