--- a/src/main/resources/templates/admin/billManager/edit.html
+++ b/src/main/resources/templates/admin/billManager/edit.html
@@ -1,11 +1,11 @@
 <#include "/admin/head.html">
 <script>
-    $(function () {
+    function initPage(){
         $('#billDate').datetimepicker({
             minView: 'month',
             format: 'yyyy-mm-dd'
         });
-    });
+    }
 
 </script>
 <div class="admin-content">
