--- a/src/main/resources/templates/admin/user/userCenter.html
+++ b/src/main/resources/templates/admin/user/userCenter.html
@@ -15,10 +15,9 @@
                 <div class="am-panel-bd">
                     <div class="am-g">
                         <div class="am-u-md-4">
-                            <img class="am-img-circle am-img-thumbnail" src="http://amui.qiniudn.com/bw-2014-06-19.jpg?imageView/1/w/1000/h/1000/q/80" alt=""/>
+                            <img class="am-img-circle am-img-thumbnail" src="/files/${user.photo}photo.jpg" alt=""/>
                         </div>
                         <div class="am-u-md-8">
-                            <p>你可以使用<a href="#">gravatar.com</a>提供的头像或者使用本地上传头像。 </p>
                             <form id="userPhoto" action="uploadPhoto" method="post" class="am-form" enctype="multipart/form-data">
                                 <div class="am-form-group">
                                     <input type="file" name="userPhoto" id="user-pic">
