--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,7 +6,8 @@
         overflow:hidden;
     }
 </style>
-
+<#macro basePath><#if springMacroRequestContext.getContextPath()=="/"><#else>${springMacroRequestContext.getContextPath()}</#if></#macro>
+<#global ctx><@basePath/></#global>
 
 <#include "/admin/main.html">
 
