--- a/src/main/resources/templates/admin/notice/list.html
+++ b/src/main/resources/templates/admin/notice/list.html
@@ -53,7 +53,7 @@
                             <td>${notice_index+1}</td>
                             <td><a href="#">${notice.name}</a></td>
                             <td>
-                                ${notice.content}
+                                ${notice.content}${base}
                             </td>
                             <td>${notice.createDate}</td>
                             <td>
