--- a/src/main/resources/templates/admin/user/userCenter.html
+++ b/src/main/resources/templates/admin/user/userCenter.html
@@ -33,14 +33,14 @@
             <div class="am-panel am-panel-default">
                 <div class="am-panel-bd">
                     <div class="user-info">
-                        <p>等级信息</p>
+                        <p>账单信息</p>
                         <div class="am-progress am-progress-sm">
                             <div class="am-progress-bar" style="width: 60%"></div>
                         </div>
-                        <p class="user-info-order">当前等级：<strong>LV8</strong> 活跃天数：<strong>587</strong> 距离下一级别：<strong>160</strong></p>
+                        <p class="user-info-order">本年记账：<strong>180</strong> 距离年底：<strong>365</strong></p>
                     </div>
                     <div class="user-info">
-                        <p>信用信息</p>
+                        <p>计划剩余</p>
                         <div class="am-progress am-progress-sm">
                             <div class="am-progress-bar am-progress-bar-success" style="width: 80%"></div>
                         </div>
