--- a/src/main/resources/templates/admin/billManager/edit.html
+++ b/src/main/resources/templates/admin/billManager/edit.html
@@ -38,13 +38,16 @@
                     <div class="am-btn-group" data-am-button>
                         <select name="billTypeId">
                             <option value="">请选择&nbsp;&nbsp;&nbsp;</option>
-                            <#list typeList as type>
-                                <#if bill.billTypeId == type.id>
-                                    <option value=${type.id} selected="selected">${type.name}</option>
-                                <#else>
-                                    <option value=${type.id}>${type.name}</option>
-                                </#if>
-
+                            <#list typeList.parent as parent>
+                                <optgroup label="${parent.name}">
+                                <#list typeList[parent.name] as child>
+                                    <#if bill.billTypeId == child.id>
+                                        <option value=${child.id} selected="selected">${child.name}</option>
+                                    <#else>
+                                        <option value=${child.id}>${child.name}</option>
+                                    </#if>
+                                </#list>
+                                </optgroup>
                             </#list>
                         </select>
                     </div>
