--- a/src/main/resources/templates/admin/billTypeMgr/add.html
+++ b/src/main/resources/templates/admin/billTypeMgr/add.html
@@ -1,4 +1,5 @@
 <#include "/admin/head.html">
+<script src="/static/admin/billTypeMgr/addNedit.js"></script>
 <div class="admin-content">
 
     <div class="am-cf am-padding">
@@ -27,17 +28,17 @@
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
-                        <select name="fid">
-                            <option value="">请选择&nbsp;&nbsp;&nbsp;</option>
-                            <#list fList as type>
-                                <option value=${type.id}>${type.name}</option>
+                        <select name="fid" onclick="setType()" id="fid" >
+                            <option value="">无&nbsp;&nbsp;&nbsp;</option>
+                            <#list fList as ftype>
+                                <option id="foption_${ftype.id}" optType="${ftype.type}" value=${ftype.id}>${ftype.name}</option>
                             </#list>
                         </select>
                     </div>
                 </div>
             </div>
 
-            <div class="am-g am-margin-top">
+            <div class="am-g am-margin-top" id="typeRadio_div">
                 <div class="am-u-sm-2 am-text-right">
                     出入账类型
                 </div>
