--- a/src/main/resources/templates/admin/head.html
+++ b/src/main/resources/templates/admin/head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>BillBook账单管理系统 - cssmoban</title>
+    <title>LifeBook - 生活之书</title>
     <meta name="description" content="这是一个 index 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
