--- a/src/main/resources/templates/admin/notice/edit.html
+++ b/src/main/resources/templates/admin/notice/edit.html
@@ -3,6 +3,8 @@
 <script type="text/javascript">
     var ue = UE.getEditor('content');
     function initPage(){
+        //解码富文本
+        editorShow("contentHidden","content",true);
         $('#createDate').datetimepicker({
             minView: 'month',
             format: 'yyyy-mm-dd'
@@ -18,7 +20,7 @@
     </div>
 
     <div class="am-g">
-        <form class="am-form" action="../update" >
+        <form class="am-form" action="../update" onsubmit="return editorShow('contentHidden','content',false)" >
             <input type="hidden" name="id" value="${notice.id}" class="am-input-sm">
             <div class="am-g am-margin-top">
                 <div class="am-u-sm-2 am-text-right">
@@ -36,7 +38,8 @@
                 </div>
                 <div class="am-u-sm-10">
                     <div class="am-btn-group" data-am-button>
-                        <textarea id="content" rows="15" name="content">${notice.content}</textarea>
+                        <textarea id="content" rows="15"></textarea>
+                        <input type="hidden" id="contentHidden" name ="content" value="${notice.content}" >
                     </div>
                 </div>
             </div>
